Hidden overflow on body completely to avoid page jumping

--- a/frontend/src/routes/styles.css
+++ b/frontend/src/routes/styles.css
@@ -24,7 +24,7 @@ body {
     background-size: cover;
     background-position: center;
 
-	overflow-y: hidden;
+	overflow: hidden;
 }
 
 h1,
